# fastapi-minimal

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Changelog.md  Dockerfile  License.md  ReadMe.md  app.json  pyproject.toml
api/: __init__.py  auth.py  home.py  settings.py
api/v1/: __init__.py  protected.py
test/integration/: conftest.py  test_home.py
test/integration/v1/: test_protected.py
