[tool.poetry]
name = "fastapi-minimal"
version = "1.0.0"
description = ""
authors = ["Florian Windolf <florianwindolf@gmail.com>"]
readme = "README.md"
include = [{ "path" = "api"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"
pydantic-settings = "^2.2.1"
fastapi = "^0.109.0"
uvicorn = "^0.28.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
pytest = "^7.4.4"
pre-commit = "^3.6.0"
httpx = "^0.27.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
